<resources>
    <string name="app_name">DallyProject</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="siguiente">Siguiente</string>
    <string name="crear_usuario">Crear usuario</string>
    <string name="confirmar_contrase_a">Confirmar Contraseña</string>
    <string name="contrasenia">Contraseña</string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento</string>
    <string name="nombre">Nombre</string>
    <string name="pais">Pais</string>
    <string name="dd_mm_aaaa">DD/MM/AAAA</string>
    <string name="telefono">Telefono</string>
    <string name="cancelar">Cancelar</string>
    <string name="enviar">Enviar</string>
    <string name="title_activity_nuevo_objetivo">NuevoObjetivo</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="Username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="Sign_up">Sign Up</string>
    <string name="Pregunta_cuentaExistente">¿Ya tienes una cuenta?</string>
    <string name="Navegacion">Log in</string>
    <string name="home">Inicio\n</string>
    <string name="calendar">Calendario</string>
    <string name="activity">Objetivos\n</string>
    <string name="settings">Ajustes\n</string>
    <string name="nombre_del_evento">Nombre del evento</string>
    <string name="guardar">Guardar calendario</string>
    <string name="apellidos">apellidos</string>
    <string name="app_agenda">App agenda</string>
    <string name="calendario">CALENDARIO</string>
    <string name="objetivos">OBJETIVOS</string>
    <string name="ajustes">AJUSTES</string>
    <string name="men">MENÚ</string>
    <string name="txtExplicacion">Escribe aquí la temática de tu nueva barra de progreso y el lugar en el que se va a llevar a cabo</string>
    <string name="lugar">Lugar</string>
    <string name="guardar2">Guardar</string>
    <string name="login">Acceder</string>
    <string name="registrarse">Registrarse</string>
    <string name="acceder">Acceder</string>
    <string name="iniciar_sesi_n_con">Iniciar sesión con:</string>
    <string name="facebook">facebook</string>
    <string name="google">google</string>
    <string name="twitter">twitter</string>
    <string name="type_message">"nose"</string>


</resources>