<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".imanol.Nuevos_objetivos">

    <TextView
        android:id="@+id/txt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtExplicacion"
        android:layout_marginHorizontal="10sp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginTop="30sp"/>

    <EditText
        android:id="@+id/editTxtNombre"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="60sp"
        android:layout_marginHorizontal="10sp"
        android:ems="10"
        android:textSize="24sp"
        android:inputType="text"
        android:hint="@string/nombre" />

    <EditText
        android:id="@+id/editTxtLugar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="60sp"
        android:layout_marginHorizontal="10sp"
        android:ems="10"
        android:textSize="24sp"
        android:inputType="text"
        android:hint="@string/lugar" />

    <TextView
        android:id="@+id/txt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10sp"
        android:text="@string/txtExplicacion"
        android:textAlignment="center"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30sp">

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="30sp"
            android:text="@string/cancelar" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="30sp"
            android:text="@string/guardar2" />
    </LinearLayout>


</LinearLayout>